--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.0.13'
     compile 'ch.qos.logback:logback-core:1.0.13'
     compile 'org.slf4j:slf4j-api:1.7.2'
+    compile 'org.apache.commons:commons-io:1.3.2'
 }
