--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+  compile project(':jfx-components')
   testCompile group: 'junit', name: 'junit', version: '4.11'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
