--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -1,7 +1,12 @@
 locale=en
+
 irc.host=irc.faforever.com
 irc.port=8167
 irc.defaultChannel=#aeolus
+
 lobby.host=lobby.faforever.com
 lobby.port=8001
+
 whatsNewUrl=http://www.faforever.com/news/
+
+vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
