* Relay server exchanges data between FA and FAF

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -10,3 +10,7 @@ lobby.port=8001
 whatsNewUrl=http://www.faforever.com/news/
 
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
+vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
+
+relay.host=lobby.faforever.com
+relay.port=8000
