--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '1.0'
+version = '0.3'
 
+mainClassName = "com.faforever.client.Main"
+applicationDefaultJvmArgs = ["-Djava.library.path=../lib"]
 
 idea {
   project {
@@ -16,6 +19,15 @@ idea {
     downloadJavadoc = false
     downloadSources = true
   }
+}
+
+task copyNativeLibs(type: Copy) {
+  from "src/main/native"
+  into "$buildDir/native"
+}
+
+applicationDistribution.from(copyNativeLibs) {
+  into "lib"
 }
 
 repositories {
