--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -9,6 +9,9 @@ lobby.port=8001
 
 whatsNewUrl=http://www.faforever.com/news/
 
+portCheck.host=home.micheljung.ch
+portCheck.port=7189
+
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
 
