Games seem to work, even in multiplayer

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -17,3 +17,6 @@ vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/la
 
 relay.host=lobby.faforever.com
 relay.port=8000
+
+proxy.host=proxy.faforever.com
+proxy.port=9124
