--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'application'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.3'
+version = '0.4'
 
 mainClassName = "com.faforever.client.Main"
 applicationDefaultJvmArgs = ["-Djava.library.path=../lib"]
@@ -46,6 +46,7 @@ dependencies {
   compile 'ch.qos.logback:logback-core:1.0.13'
   compile 'org.slf4j:slf4j-api:1.7.2'
   compile 'org.apache.commons:commons-io:1.3.2'
+  compile 'org.apache.httpcomponents:httpclient:4.4.1'
   compile 'net.java.dev.jna:jna:4.1.0'
   compile 'net.java.dev.jna:jna-platform:4.1.0'
   compile 'org.controlsfx:controlsfx:8.20.8'
