--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
   compile 'org.springframework:spring-context:4.0.5.RELEASE'
-  compile 'org.springframework:spring-core:4.0.5.RELEASE'
+  compile 'org.springframework:spring-core:4.0.5.RELEASE'test
   compile 'org.pircbotx:pircbotx:2.0.1'
   compile 'ch.qos.logback:logback-classic:1.0.13'
   compile 'ch.qos.logback:logback-core:1.0.13'
