--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,16 @@ dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
   compile 'org.springframework:spring-context:4.0.5.RELEASE'
-  compile 'org.springframework:spring-core:4.0.5.RELEASE'test
+  compile 'org.springframework:spring-core:4.0.5.RELEASE'
   compile 'org.pircbotx:pircbotx:2.0.1'
   compile 'ch.qos.logback:logback-classic:1.0.13'
   compile 'ch.qos.logback:logback-core:1.0.13'
   compile 'org.slf4j:slf4j-api:1.7.2'
   compile 'org.apache.commons:commons-io:1.3.2'
+  compile 'org.apache.commons:commons-compress:1.9'
   compile 'org.apache.httpcomponents:httpclient:4.4.1'
   compile 'net.java.dev.jna:jna:4.1.0'
   compile 'net.java.dev.jna:jna-platform:4.1.0'
   compile 'org.controlsfx:controlsfx:8.20.8'
+  compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
 }
