Parsing the FAF leaderboard web view and displaying its results in the ladder

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -26,3 +26,6 @@ patch.git.url=https://github.com/FAForever/binary-patch
 
 update.host=lobby.faforever.com
 update.port=9001
+
+ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
+ladder.params=pos_start=0&max_players=10000&board=1v1
