* Lazily loading views * Started parsing map vault (WIP)

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -15,6 +15,7 @@ portCheck.port=7189
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
 vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
+vault.mapQueryParams=offset=%d&count=%d
 
 relay.host=lobby.faforever.com
 relay.port=8000
