--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ task copyNativeLibs(type: Copy) {
   into "$buildDir/native"
 }
 
+task wrapper(type: Wrapper) {
+  gradleVersion = '2.4'
+}
+
 applicationDistribution.from(copyNativeLibs) {
   into "lib"
 }
@@ -53,4 +57,5 @@ dependencies {
   compile 'net.java.dev.jna:jna-platform:4.1.0'
   compile 'org.controlsfx:controlsfx:8.40.9'
   compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
+  compile 'org.jetbrains:annotations:13.0'
 }
