--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ repositories {
 dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.11'
   testCompile 'org.hamcrest:hamcrest-integration:1.3'
+  testCompile 'org.mockito:mockito-core:2.0.13-beta'
+  testCompile "org.testfx:testfx-core:4.0.+"
+  testCompile "org.testfx:testfx-junit:4.0.+"
+
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
   compile 'org.springframework:spring-context:4.0.5.RELEASE'
