--- a/build.gradle
+++ b/build.gradle
@@ -62,4 +62,5 @@ dependencies {
   compile 'org.controlsfx:controlsfx:8.40.9'
   compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
   compile 'org.jetbrains:annotations:13.0'
+  compile 'net.sf.jtidy:jtidy:r938'
 }
