--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -11,6 +11,7 @@ whatsNewUrl=http://www.faforever.com/news/
 
 portCheck.host=home.micheljung.ch
 portCheck.port=7189
+portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
