--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -31,3 +31,8 @@ update.port=9001
 
 ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
 ladder.params=pos_start=0&max_players=10000&board=1v1
+
+rating.min=0
+rating.max=2500
+rating.selectedMax=1300
+rating.selectedMin=800
