--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
   compile 'ch.qos.logback:logback-classic:1.0.13'
   compile 'ch.qos.logback:logback-core:1.0.13'
   compile 'org.slf4j:slf4j-api:1.7.2'
-  compile 'org.apache.commons:commons-io:1.3.2'
+  compile 'commons-io:commons-io:2.4'
   compile 'org.apache.commons:commons-compress:1.9'
   compile 'org.apache.httpcomponents:httpclient:4.4.1'
   compile 'net.java.dev.jna:jna:4.1.0'
@@ -63,4 +63,5 @@ dependencies {
   compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
   compile 'org.jetbrains:annotations:13.0'
   compile 'net.sf.jtidy:jtidy:r938'
+  compile 'com.offbynull.portmapper:portmapper:1.0.0'
 }
