--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -9,13 +9,14 @@ lobby.port=8001
 
 whatsNewUrl=http://www.faforever.com/news/
 
-portCheck.host=home.micheljung.ch
-portCheck.port=7189
+portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
 vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
 vault.mapQueryParams=offset=%d&count=%d&sortby=upload&order=DESC
+
+playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
 
 relay.host=lobby.faforever.com
 relay.port=8000
@@ -30,3 +31,8 @@ update.port=9001
 
 ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
 ladder.params=pos_start=0&max_players=10000&board=1v1
+
+rating.min=0
+rating.max=2500
+rating.selectedMax=1300
+rating.selectedMin=800
