--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ applicationDistribution.from(copyNativeLibs) {
 
 repositories {
   mavenCentral()
+  maven {
+    url = 'http://4thline.org/m2'
+  }
 }
 
 dependencies {
@@ -63,5 +66,5 @@ dependencies {
   compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
   compile 'org.jetbrains:annotations:13.0'
   compile 'net.sf.jtidy:jtidy:r938'
-  compile 'com.offbynull.portmapper:portmapper:1.0.0'
+  compile 'org.fourthline.cling:cling-core:2.0.1'
 }
