Downloading maps before joining a game AWESOME

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -11,6 +11,7 @@ whatsNewUrl=http://www.faforever.com/news/
 
 portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
+vault.mapDownloadUrl=http://content.faforever.com/faf/vault/maps/%s.zip
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
 vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
