--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ install: true
 script:
   - sudo apt-get update && sudo apt-get install oracle-java8-installer
   - java -version
+
+after_success:
+  - coveralls
