--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -9,6 +11,12 @@ version = '0.4'
 
 mainClassName = "com.faforever.client.Main"
 applicationDefaultJvmArgs = ["-Djava.library.path=../lib"]
+
+jacocoTestReport {
+  reports {
+    xml.enabled = true
+  }
+}
 
 idea {
   project {
@@ -43,6 +51,8 @@ repositories {
 }
 
 dependencies {
+  classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
+
   testCompile group: 'junit', name: 'junit', version: '4.11'
   testCompile 'org.hamcrest:hamcrest-integration:1.3'
   testCompile 'org.mockito:mockito-core:2.0.13-beta'
