--- a/build.gradle
+++ b/build.gradle
@@ -50,9 +50,17 @@ repositories {
   }
 }
 
-dependencies {
-  classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
+buildscript {
+  repositories {
+    mavenCentral()
+  }
 
+  dependencies {
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+  }
+}
+
+dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.11'
   testCompile 'org.hamcrest:hamcrest-integration:1.3'
   testCompile 'org.mockito:mockito-core:2.0.13-beta'
