--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -7,6 +7,9 @@ irc.defaultChannel=#aeolus
 lobby.host=lobby.faforever.com
 lobby.port=8001
 
+stats.host=lobby.faforever.com
+stats.port=11002
+
 whatsNewUrl=http://www.faforever.com/news/
 
 portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
