* UPnP * Port check

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -12,6 +12,8 @@ stats.port=11002
 
 whatsNewUrl=http://www.faforever.com/news/
 
+portCheck.host=home.micheljung.ch
+portCheck.port=7189
 portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapDownloadUrl=http://content.faforever.com/faf/vault/maps/%s.zip
@@ -30,8 +32,11 @@ proxy.port=9124
 
 patch.git.url=https://github.com/FAForever/binary-patch
 
-update.host=lobby.faforever.com
-update.port=9001
+mumble.host=mumble.faforever.com
+mumble.rootChannel=Games
+mumble.pluginName=faforever
+mumble.pluginDescription=Forged Alliance Forever Mumbleconnector
+mumble.
 
 ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
 ladder.params=pos_start=0&max_players=10000&board=1v1
