--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
   compile 'org.eclipse.jgit:org.eclipse.jgit:4.0.0.201505260635-rc2'
   compile 'org.jetbrains:annotations:13.0'
   compile 'net.sf.jtidy:jtidy:r938'
-  compile 'org.fourthline.cling:cling-core:2.0.1'
   compile 'com.neovisionaries:nv-i18n:1.15'
+  compile 'org.slf4j:jul-to-slf4j:1.7.12'
+  compile 'org.bitlet:weupnp:0.1.3'
 }
