News as cards; going to change it after commit :P

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -10,7 +10,7 @@ lobby.port=8001
 stats.host=lobby.faforever.com
 stats.port=11002
 
-whatsNewUrl=http://www.faforever.com/news/
+newsFeedUrl=http://www.faforever.com/news/rss
 
 portCheck.host=home.micheljung.ch
 portCheck.port=7189
@@ -29,6 +29,9 @@ relay.port=8000
 
 proxy.host=proxy.faforever.com
 proxy.port=9124
+
+replay.host=lobby.faforever.com
+replay.port=15000
 
 patch.git.url=https://github.com/FAForever/binary-patch
 
