--- a/build.gradle
+++ b/build.gradle
@@ -83,4 +83,6 @@ dependencies {
   compile 'com.neovisionaries:nv-i18n:1.15'
   compile 'org.slf4j:jul-to-slf4j:1.7.12'
   compile 'org.bitlet:weupnp:0.1.3'
+  compile 'com.rometools:rome:1.5.0'
+  compile 'org.jsoup:jsoup:1.8.2'
 }
