--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -10,7 +10,7 @@ lobby.port=8001
 stats.host=lobby.faforever.com
 stats.port=11002
 
-newsFeedUrl=http://www.faforever.com/news/rss
+newsFeedUrl=http://www.faforever.com/news/feed
 
 portCheck.host=home.micheljung.ch
 portCheck.port=7189
