Trying to get replay recording working

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -31,8 +31,10 @@ relay.port=8000
 proxy.host=proxy.faforever.com
 proxy.port=9124
 
-replay.host=lobby.faforever.com
-replay.port=15000
+fafReplayServer.host=lobby.faforever.com
+fafReplayServer.port=15000
+localReplayServer.port=15000
+replayFileFormat=%d-%s.fafreplay
 
 patch.git.url=https://github.com/FAForever/binary-patch
 
@@ -49,3 +51,4 @@ rating.min=0
 rating.max=2500
 rating.selectedMax=1300
 rating.selectedMin=800
+
