Reading local replay files and display them in a treetable

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -35,6 +35,7 @@ fafReplayServer.host=lobby.faforever.com
 fafReplayServer.port=15000
 localReplayServer.port=15000
 replayFileFormat=%d-%s.fafreplay
+replayFileGlob=*.fafreplay
 
 patch.git.url=https://github.com/FAForever/binary-patch
 
