--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -22,6 +22,7 @@ vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/sm
 vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
 vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
 vault.mapQueryParams=offset=%d&count=%d&sortby=upload&order=DESC
+vault.replayDownloadUrl=http://content.faforever.com/faf/vault/replay_vault/replay.php?id=%d
 
 playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
 
