--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
   compile 'org.springframework:spring-context:4.0.5.RELEASE'
+  compile 'org.springframework:spring-context-support:4.0.5.RELEASE'
   compile 'org.springframework:spring-core:4.0.5.RELEASE'
   compile 'org.springframework:spring-test:4.0.5.RELEASE'
   compile 'org.pircbotx:pircbotx:2.0.1'
@@ -103,4 +104,5 @@ dependencies {
   compile 'org.slf4j:jul-to-slf4j:1.7.12'
   compile 'org.bitlet:weupnp:0.1.3'
   compile 'com.rometools:rome:1.5.0'
+  compile 'net.sf.ehcache:ehcache:2.10.0'
 }
