--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 
 sudo: required
+script: ./gradlew build jacocoTestReport
 
 jdk:
   - oraclejdk8
@@ -12,4 +13,4 @@ script:
   - java -version
 
 after_success:
-- ./gradlew jacocoTestReport coveralls
+- ./gradlew jacocoRootReport coveralls
