Explicitly setting jacoco version; hoping that travis build no longer stucks

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ repositories {
   mavenCentral()
 }
 
+jacoco {
+  toolVersion = "0.7.2.201409121644"
+}
+
 buildscript {
   repositories {
     mavenCentral()
