--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'install4j'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.4.3-alpha'
+version = '0.4.4-alpha'
 
 mainClassName = "com.faforever.client.Main"
 applicationDefaultJvmArgs = ["-Djava.library.path=../lib"]
@@ -48,9 +48,9 @@ applicationDistribution.from(copyNativeLibs) {
 }
 
 // Uncomment when doing a release build. I have yet to find out how to make an install4j installation optional
-//install4j {
-//  installDir = file(install4jHomeDir)
-//}
+install4j {
+  installDir = file(install4jHomeDir)
+}
 
 task buildInstaller(type: com.install4j.gradle.Install4jTask) {
   dependsOn 'installDist'
