--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,9 @@ applicationDistribution.from(copyNativeLibs) {
 }
 
 // Uncomment when doing a release build. I have yet to find out how to make an install4j installation optional
-install4j {
-  installDir = file(install4jHomeDir)
-}
+//install4j {
+//  installDir = file(install4jHomeDir)
+//}
 
 task buildInstaller(type: com.install4j.gradle.Install4jTask) {
   dependsOn 'installDist'
