--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script:
   - java -version
 
 after_success:
-- ./gradlew test jacocoTestReport coveralls
+- ./gradlew --debug test jacocoTestReport coveralls
