--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ jdk:
 
 install: true
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 script:
   - sudo apt-get update && sudo apt-get install oracle-java8-installer
   - java -version
