--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -27,6 +27,7 @@ vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/la
 vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
 vault.mapQueryParams=offset=%d&count=%d&sortby=upload&order=DESC
 vault.replayDownloadUrl=http://content.faforever.com/faf/vault/replay_vault/replay.php?id=%d
+vault.mapCommentUrl=http://content.faforever.com/faf/vault/map_vault/get_feedback.php?map_id=%d
 
 playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
 
