Semi functional comment cards, html comment parser

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -28,6 +28,7 @@ vault.mapQueryUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
 vault.mapQueryParams=offset=%d&count=%d&sortby=upload&order=DESC
 vault.replayDownloadUrl=http://content.faforever.com/faf/vault/replay_vault/replay.php?id=%d
 vault.mapCommentUrl=http://content.faforever.com/faf/vault/map_vault/get_feedback.php?map_id=%d
+vault.singleMapUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php?search=%s&players=all&size=all&sortby=upload&order=DESC&userid=-1&offset=0&count=60
 
 playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
 
