Fixed html parser and prep for master merge

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -30,7 +30,7 @@ vault.replayDownloadUrl=http://content.faforever.com/faf/vault/replay_vault/repl
 vault.mapCommentUrl=http://content.faforever.com/faf/vault/map_vault/get_feedback.php?map_id=%d
 vault.singleMapUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php?search=%s&players=all&size=all&sortby=upload&order=DESC&userid=-1&offset=0&count=60
 
-playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
+playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?displayName=%s
 
 relay.host=lobby.faforever.com
 relay.port=8000
