--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,21 @@
+buildscript {
+  repositories {
+    mavenCentral()
+    maven {
+      url 'http://maven.ej-technologies.com/repository'
+    }
+  }
+
+  dependencies {
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+    classpath 'com.install4j:gradle-plugin:6.0'
+  }
+}
+
+plugins {
+  id "org.sonarqube" version "1.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
@@ -12,6 +30,14 @@ version = '0.4.5-alpha'
 
 mainClassName = "com.faforever.client.Main"
 applicationDefaultJvmArgs = ["-Djava.library.path=../lib"]
+
+sonarqube {
+  properties {
+    property "sonar.host.url", "http://home.micheljung.ch/sonar"
+    property "sonar.jdbc.url", "jdbc:mysql://home.micheljung.ch:3306/sonar"
+    property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+  }
+}
 
 jacocoTestReport {
   reports {
@@ -68,20 +94,6 @@ repositories {
 
 jacoco {
   toolVersion = "0.7.5.201505241946"
-}
-
-buildscript {
-  repositories {
-    mavenCentral()
-    maven {
-      url 'http://maven.ej-technologies.com/repository'
-    }
-  }
-
-  dependencies {
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-    classpath 'com.install4j:gradle-plugin:6.0'
-  }
 }
 
 dependencies {
