--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ addons:
       name: "micheljung/downlords-faf-client"
       description: "A high quality re-implementation of the Forged Alliance Forever client"
     notification_email: michel.jung89@gmail.com
-    build_command_prepend: "<Your build preprocessing command here>"
+    build_command_prepend: "./gradlew clean"
     build_command:   "./gradlew build"
     branch_pattern: coverity_scan
