Trying to get coverity & travis use jdk8u45+

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ env:
    - secure: "UVIbeoJpx9n0KSWHbpdWZuR4zeZfXw3JQBq2Zb1h0/j4uREfXWiGFuNVQBPjsdtYi2+LkecjJ/MgKWo+SS0SjsvTa/ZPkOXt4408H1qYgwVnvWoeL/g1QQ6T8ADNysl/4ZtJLnSp0WXYEBkfHYZJD++vgDwkpVhnCLVzSFVAHls="
 
 addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
   coverity_scan:
     project:
       name: "micheljung/downlords-faf-client"
