--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ dependencies {
   testCompile 'org.mockito:mockito-core:2.0.13-beta'
   testCompile "org.testfx:testfx-core:4.0.+"
   testCompile "org.testfx:testfx-junit:4.0.+"
+  testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
+  testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
 
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
