Ignoring sonarIssues.xml

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
+.idea/sonarIssues.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
