--- a/build.gradle
+++ b/build.gradle
@@ -132,4 +132,5 @@ dependencies {
   compile 'org.bitlet:weupnp:0.1.3'
   compile 'com.rometools:rome:1.5.0'
   compile 'net.sf.ehcache:ehcache:2.10.0'
+  compile 'org.jsoup:jsoup:1.8.2'
 }
