* Removing controlsfx since it depends on internal JDK APIs * Community hub stub

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -55,8 +55,5 @@ mumble.pluginDescription=Forged Alliance Forever Mumbleconnector
 ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
 ladder.params=pos_start=0&max_players=10000&board=1v1
 
-rating.min=0
-rating.max=3000
-rating.selectedMax=1300
-rating.selectedMin=800
-
+google.oauth.id=1065314596988-poprcj1ccsr4kb66771ua57b0hq9i52u.apps.googleusercontent.com
+google.oauth.key=Bwn33umoQzj75T5ThHu6P7ff
