initial implementation of #85 auto update

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -57,3 +57,6 @@ ladder.params=pos_start=0&max_players=10000&board=1v1
 
 google.oauth.id=1065314596988-poprcj1ccsr4kb66771ua57b0hq9i52u.apps.googleusercontent.com
 google.oauth.key=Bwn33umoQzj75T5ThHu6P7ff
+
+github.releases.url=https://api.github.com/repos/micheljung/downlords-faf-client/releases
+github.releases.timeout=3000
