--- a/build.gradle
+++ b/build.gradle
@@ -100,10 +100,12 @@ jacoco {
 }
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.11'
+  testCompile 'junit:junit:4.11'
   testCompile 'org.hamcrest:hamcrest-integration:1.3'
   testCompile 'org.mockito:mockito-core:2.0.13-beta'
-  testCompile "org.testfx:testfx-core:4.0.+"
+  testCompile("org.testfx:testfx-core:4.0.+") {
+    exclude module: 'guava'
+  }
   testCompile "org.testfx:testfx-junit:4.0.+"
   testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
   testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
@@ -114,7 +116,10 @@ dependencies {
   compile 'org.springframework:spring-context-support:4.0.5.RELEASE'
   compile 'org.springframework:spring-core:4.0.5.RELEASE'
   compile 'org.springframework:spring-test:4.0.5.RELEASE'
-  compile 'org.pircbotx:pircbotx:2.0.1'
+  compile('org.pircbotx:pircbotx:2.0.1') {
+    exclude module: 'guava'
+  }
+  compile 'com.google.guava:guava:18.0'
   compile 'ch.qos.logback:logback-classic:1.0.13'
   compile 'ch.qos.logback:logback-core:1.0.13'
   compile 'org.slf4j:slf4j-api:1.7.2'
@@ -129,6 +134,5 @@ dependencies {
   compile 'org.slf4j:jul-to-slf4j:1.7.12'
   compile 'org.bitlet:weupnp:0.1.3'
   compile 'com.rometools:rome:1.5.0'
-  compile 'net.sf.ehcache:ehcache:2.10.0'
   compile 'org.jsoup:jsoup:1.8.2'
 }
