--- a/build.gradle
+++ b/build.gradle
@@ -135,4 +135,5 @@ dependencies {
   compile 'org.bitlet:weupnp:0.1.3'
   compile 'com.rometools:rome:1.5.0'
   compile 'org.jsoup:jsoup:1.8.2'
+  compile 'net.dongliu:jvcdiff:2.0.2'
 }
