Updated .gitattributes to avoid changes in binary files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
 # Auto detect text files and perform LF normalization
-*         text=auto eol=lf
-*.dll     -text
-*.png
-*.ttf
+* text=auto eol=lf
+
+*.dll     binary
+*.ttf     binary
+*.png     binary
+*.jpg     binary
+*.mp3     binary
