Improved task handling (wip)

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -63,3 +63,7 @@ google.oauth.key=Bwn33umoQzj75T5ThHu6P7ff
 
 github.releases.url=https://api.github.com/repos/micheljung/downlords-faf-client/releases
 github.releases.timeout=3000
+
+imgur.upload.baseUrl=https://api.imgur.com/3/image
+imgur.upload.clientId=141ee8a7030f16d
+imgur.upload.maxSize=2097152
