--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -20,7 +20,7 @@ replay.port=11002
 
 newsFeedUrl=http://www.faforever.com/news/feed
 
-portCheck.host=home.micheljung.ch
+portCheck.host=78.47.80.109
 portCheck.port=7189
 portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
@@ -67,3 +67,17 @@ github.releases.timeout=3000
 imgur.upload.baseUrl=https://api.imgur.com/3/image
 imgur.upload.clientId=141ee8a7030f16d
 imgur.upload.maxSize=2097152
+
+rating.initialStandardDeviation=500
+rating.initialMean=1500
+rating.beta=250
+rating.low=500
+rating.moderate=1000
+rating.good=1500
+rating.high=2000
+rating.top=2500
+
+ranked1v1.search.expansionDelay=10000
+ranked1v1.search.radiusIncrement=0.05
+ranked1v1.search.maxRadius=0.25
+
