--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -81,3 +81,5 @@ ranked1v1.search.expansionDelay=10000
 ranked1v1.search.radiusIncrement=0.05
 ranked1v1.search.maxRadius=0.25
 
+parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
+parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
