--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -18,6 +18,9 @@ stats.port=11002
 replay.host=lobby.faforever.com
 replay.port=11002
 
+mods.host=lobby.faforever.com
+mods.port=11002
+
 newsFeedUrl=http://www.faforever.com/news/feed
 
 portCheck.host=78.47.80.109
