--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,12 @@
 language: java
 
-sudo: required
-
-jdk:
-  - oraclejdk8
+sudo: false
 
 install: true
 
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-
-script:
-  - sudo apt-get update && sudo apt-get install oracle-java8-installer
-  - java -version
 
 after_success:
 - ./gradlew test jacocoTestReport coveralls
