--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
 
 after_success:
-- ./gradlew jacocoTestReport coveralls
+- ./gradlew jacocoTestReport coveralls --debug
 
 env:
   global:
