--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 
+script:
+- ./gradlew --debug check
+
 after_success:
 - ./gradlew  --debug jacocoTestReport coveralls
 
