--- a/build.gradle
+++ b/build.gradle
@@ -108,13 +108,14 @@ dependencies {
   }
   testCompile "org.testfx:testfx-junit:4.0.+"
   testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
-  testCompile "nl.jqno.equalsverifier:equalsverifier:1.7.3"
+  testCompile 'org.springframework:spring-test:4.0.5.RELEASE'
 
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.springframework:spring-beans:4.0.5.RELEASE'
   compile 'org.springframework:spring-context:4.0.5.RELEASE'
   compile 'org.springframework:spring-context-support:4.0.5.RELEASE'
   compile 'org.springframework:spring-core:4.0.5.RELEASE'
+  compile 'org.springframework:spring-oxm:4.0.5.RELEASE'
   compile('org.pircbotx:pircbotx:2.0.1') {
     exclude module: 'guava'
   }
@@ -138,5 +139,5 @@ dependencies {
   compile 'com.github.thiagolocatelli:parse4j:1.4'
   compile 'com.google.apis:google-api-services-games:v1-rev132-1.20.0'
   compile 'com.google.oauth-client:google-oauth-client-java7:1.16.0-rc'
-  compile 'com.timgroup:jgravatar:1.0'
+  compile 'com.thoughtworks.xstream:xstream:1.4.8'
 }
