--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -86,3 +86,6 @@ ranked1v1.search.maxRadius=0.25
 
 parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
 parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
+
+gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
+gravatar.profile.urlFormat=http://www.gravatar.com/%s
