--- a/build.gradle
+++ b/build.gradle
@@ -136,8 +136,9 @@ dependencies {
   compile 'com.rometools:rome:1.5.0'
   compile 'org.jsoup:jsoup:1.8.2'
   compile 'net.dongliu:jvcdiff:2.0.2'
-  compile 'com.github.thiagolocatelli:parse4j:1.4'
-  compile 'com.google.apis:google-api-services-games:v1-rev132-1.20.0'
+  compile('com.google.apis:google-api-services-games:v1-rev133-1.20.0') {
+    exclude module: 'guava-jdk5'
+  }
   compile 'com.google.oauth-client:google-oauth-client-java7:1.16.0-rc'
   compile 'com.thoughtworks.xstream:xstream:1.4.8'
 }
