--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -89,3 +89,5 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
+
+playServices.minGameTime=300000
