Hello native achievements & events

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -87,4 +87,12 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
 
-playServices.minGameTime=300000
+playServices.minGameTime=0
+
+oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
+oauth.authUri=http://localhost:8080/oauth/auth
+oauth.tokenUri=http://localhost:8080/oauth/token
+oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
+oauth.redirectUris=http://localhost
+
+api.baseUrl=http://localhost:8080/
