Adapting upcoming server changes * Protocol Changes * Achievements that will be processed by the server

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -6,20 +6,26 @@ irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
 
-lobby.host=lobby.faforever.com
+lobby.host=localhost
 lobby.port=8001
 
-update.host=lobby.faforever.com
+update.host=dev.faforever.com
 update.port=9001
 
-stats.host=lobby.faforever.com
+stats.host=dev.faforever.com
 stats.port=11002
 
-replay.host=lobby.faforever.com
+replay.host=dev.faforever.com
 replay.port=11002
 
-mods.host=lobby.faforever.com
+mods.host=dev.faforever.com
 mods.port=11002
+
+relay.host=localhost
+relay.port=8000
+
+proxy.host=proxy.faforever.com
+proxy.port=9124
 
 newsFeedUrl=http://www.faforever.com/news/feed
 
@@ -38,12 +44,6 @@ vault.singleMapUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php
 vault.modRoot=http://content.faforever.com/faf/vault/mods/
 
 playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
-
-relay.host=lobby.faforever.com
-relay.port=8000
-
-proxy.host=proxy.faforever.com
-proxy.port=9124
 
 fafReplayServer.host=lobby.faforever.com
 fafReplayServer.port=15000
