--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -6,7 +6,7 @@ irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
 
-lobby.host=localhost
+lobby.host=dev.faforever.com
 lobby.port=8001
 
 update.host=dev.faforever.com
