--- a/build.gradle
+++ b/build.gradle
@@ -140,4 +140,7 @@ dependencies {
   compile 'com.google.oauth-client:google-oauth-client-java7:1.16.0-rc'
   compile 'com.google.http-client:google-http-client-gson:1.20.0'
   compile 'com.thoughtworks.xstream:xstream:1.4.8'
+  compile 'org.apache.lucene:lucene-core:5.3.1'
+  compile 'org.apache.lucene:lucene-analyzers-common:5.3.1'
+  compile 'org.apache.lucene:lucene-suggest:5.3.1'
 }
