--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -6,7 +6,7 @@ irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
 
-lobby.host=localhost
+lobby.host=dev.faforever.com
 lobby.port=8001
 
 update.host=dev.faforever.com
@@ -21,13 +21,13 @@ replay.port=11002
 mods.host=dev.faforever.com
 mods.port=11002
 
-relay.host=localhost
+relay.host=dev.faforever.com
 relay.port=8000
 
 proxy.host=proxy.faforever.com
 proxy.port=9124
 
-api.baseUrl=http://localhost:8080
+api.baseUrl=http://api.dev.faforever.com
 
 newsFeedUrl=http://www.faforever.com/news/feed
 
