Map vault from FAF API #74

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ vault.mapCommentUrl=http://content.faforever.com/faf/vault/map_vault/get_feedbac
 vault.singleMapUrl=http://content.faforever.com/faf/vault/map_vault/get_maps.php?search=%s&players=all&size=all&sortby=upload&order=DESC&userid=-1&offset=0&count=60
 vault.modRoot=http://content.faforever.com/faf/vault/mods/
 
-playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?name=%s
+playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?displayName=%s
 
 fafReplayServer.host=lobby.faforever.com
 fafReplayServer.port=15000
