#129 implement turn Did this really brake the UI?

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -21,8 +21,8 @@ replay.port=11002
 mods.host=dev.faforever.com
 mods.port=11002
 
-proxy.host=proxy.faforever.com
-proxy.port=9124
+turn.host=dev.faforever.com
+turn.port=93478
 
 api.baseUrl=http://api.dev.faforever.com
 
