--- a/build.gradle
+++ b/build.gradle
@@ -274,4 +274,5 @@ dependencies {
   compile 'com.github.nocatch:nocatch:1.1'
   compile 'org.javassist:javassist:3.20.0-GA'
   compile 'io.sigpipe:jbsdiff:1.0'
+  compile 'org.luaj:luaj-jse:3.0.1'
 }
