#126 Fix connectivity check

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -18,9 +18,6 @@ stats.port=11002
 replay.host=dev.faforever.com
 replay.port=11002
 
-mods.host=dev.faforever.com
-mods.port=11002
-
 turn.host=dev.faforever.com
 turn.port=3478
 
@@ -28,9 +25,8 @@ api.baseUrl=http://api.dev.faforever.com
 
 newsFeedUrl=http://www.faforever.com/news/feed
 
-portCheck.host=78.47.80.109
-portCheck.port=7189
-portCheck.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
+upnp.timeout=3000
+connectivity.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapDownloadUrl=http://content.faforever.com/faf/vault/maps/%s.zip
 vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
