--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -82,8 +82,9 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
 
+oauth.loginUri=http://api.dev.faforever.com/login
 oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
-oauth.authUri=http://dev.faforever.com:8090/oauth/authorize
-oauth.tokenUri=http://dev.faforever.com:8090/oauth/token
+oauth.authUri=http://api.dev.faforever.com/oauth/authorize
+oauth.tokenUri=http://api.dev.faforever.com/oauth/token
 oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
 oauth.redirectUris=http://localhost
