Taskbar Progress * Closes #164 * Fixed MockLobbyServerAccessor

--- a/build.gradle
+++ b/build.gradle
@@ -144,4 +144,5 @@ dependencies {
   compile 'org.apache.lucene:lucene-analyzers-common:5.3.1'
   compile 'org.apache.lucene:lucene-suggest:5.3.1'
   compile 'org.opentelecoms.ice:ice4j-fork:1.0+f.4'
+  compile 'com.nativelibs4java:bridj:0.7.0'
 }
