--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -20,6 +20,7 @@ replay.port=11002
 
 turn.host=dev.faforever.com
 turn.port=3478
+turn.refreshInterval=20
 
 api.baseUrl=http://api.dev.faforever.com
 
