Adapt server changes * Send version and user_agent in ask_session * Fix 1v1 search

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -22,7 +22,7 @@ turn.host=dev.faforever.com
 turn.port=3478
 turn.refreshInterval=20
 
-api.baseUrl=http://api.dev.faforever.com
+api.baseUrl=http://api.faforever.com
 
 newsFeedUrl=http://www.faforever.com/news/feed
 
