Bunch of hot fixes before release due to new server

--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -6,19 +6,19 @@ irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
 
-lobby.host=dev.faforever.com
+lobby.host=lobby.faforever.com
 lobby.port=8001
 
-update.host=dev.faforever.com
+update.host=faforever.com
 update.port=9001
 
-stats.host=dev.faforever.com
+stats.host=faforever.com
 stats.port=11002
 
-replay.host=dev.faforever.com
+replay.host=lobby.faforever.com
 replay.port=11002
 
-turn.host=dev.faforever.com
+turn.host=faforever.com
 turn.port=3478
 turn.refreshInterval=20
 
@@ -83,9 +83,9 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
 
-oauth.loginUri=http://api.dev.faforever.com/login
+oauth.loginUri=http://api.faforever.com/login
 oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
-oauth.authUri=http://api.dev.faforever.com/oauth/authorize
-oauth.tokenUri=http://api.dev.faforever.com/oauth/token
+oauth.authUri=http://api.faforever.com/oauth/authorize
+oauth.tokenUri=http://api.faforever.com/oauth/token
 oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
 oauth.redirectUris=http://localhost
