--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -20,7 +20,9 @@ replay.port=11002
 
 turn.host=faforever.com
 turn.port=3478
-turn.refreshInterval=20
+turn.refreshInterval=20000
+
+connectivityCheck.timeout=5000
 
 api.baseUrl=http://api.faforever.com
 
@@ -58,7 +60,7 @@ ladder.url=http://content.faforever.com/faf/leaderboards/get_players.php
 ladder.params=pos_start=0&max_players=10000&board=1v1
 
 github.releases.url=https://api.github.com/repos/micheljung/downlords-faf-client/releases
-github.releases.timeout=3000
+github.releases.timeout=5000
 
 imgur.upload.baseUrl=https://api.imgur.com/3/image
 imgur.upload.clientId=141ee8a7030f16d
