--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'install4j'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.6.5-alpha'
+version = '0.6.7-alpha'
 
 mainClassName = "com.faforever.client.Main"
 applicationDefaultJvmArgs = ["-Djava.library.path=build/native", "-javaagent:build/libs/webview-patch-agent.jar"]
@@ -91,9 +91,9 @@ applicationDistribution.from(copyNativeLibs) {
 }
 
 // Uncomment when doing a release build. I have yet to find out how to make an install4j installation optional
-install4j {
-  installDir = file(install4jHomeDir)
-}
+//install4j {
+//  installDir = file(install4jHomeDir)
+//}
 
 task buildInstaller(type: Install4jTask) {
   dependsOn 'clean'
