--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
+import co.riiid.gradle.ReleaseTask
 import com.install4j.gradle.Install4jTask
+import groovy.json.JsonSlurper
+import groovyx.net.http.ContentType
+import groovyx.net.http.HTTPBuilder
+import groovyx.net.http.Method
+import groovyx.net.http.ParserRegistry
+import proguard.gradle.ProGuardTask
 
 buildscript {
   repositories {
@@ -11,27 +18,100 @@ buildscript {
   dependencies {
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
     classpath 'com.install4j:gradle-plugin:6.0'
+    classpath 'net.sf.proguard:proguard-gradle:5.2.1'
   }
 }
 
 plugins {
   id "org.sonarqube" version "1.0"
+  id "com.install4j.gradle" version "6.1.1"
+  id "co.riiid.gradle" version "0.4.2"
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'application'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'install4j'
+apply plugin: 'distribution'
+
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 version = '0.6.10-alpha'
 
-mainClassName = "com.faforever.client.Main"
-applicationDefaultJvmArgs = ["-Djava.library.path=build/native", "-javaagent:build/libs/webview-patch-agent.jar", "-Xmx640m"]
+class HttpBuilder extends HTTPBuilder {
+
+  public HttpBuilder(String url) {
+    super(url)
+    this.parser.'text/json' = { resp ->
+      def bufferedText = resp.entity.content.getText(ParserRegistry.getCharset(resp)).trim()
+      return new JsonSlurper().parseText(bufferedText)
+    }
+    this.parser.'application/json' = this.parser.'text/json'
+  }
+}
+
+def httpRequest(Method method, String url, onSuccess) {
+  def http = new HttpBuilder(url)
+
+  http.request(method) {
+    requestContentType = ContentType.JSON
+
+    headers.'User-Agent' = 'downlords-faf-client-gradle'
+    headers.'Authorization' = "token ${project.github.token}"
+    headers.'Accept' = 'application/vnd.github.v3+json'
+
+    response.success = onSuccess
+
+    response.failure = { resp, json ->
+      logger.debug 'Response headers: \n' + resp.headers.collect { "< $it" }.join('\n')
+      def errorMessage = json ? json.message : resp.statusLine
+      def ref = json ? "See $json.documentation_url" : ''
+      def errorDetails = json && json.errors ? "Details: " + json.errors.collect { it }.join('\n') : ''
+      throw new GradleScriptException("$errorMessage. $ref. $errorDetails", null)
+    }
+  }
+}
+
+def buildReleaseBody() {
+  def GITHUB_BASE_URL = "https://api.github.com/repos/micheljung/downlords-faf-client"
+  def versionString = "v" + project.version
+
+  def milestones
+  httpRequest(Method.GET, "${GITHUB_BASE_URL}/milestones?state=all", { resp, json ->
+    milestones = json
+  })
+
+  if (milestones == null) throw new GradleException("Milestones could not be loaded")
+
+  def milestoneNumber
+  for (Object milestone : milestones) {
+    if (versionString == milestone.title) {
+      milestoneNumber = milestone.number
+    }
+  }
+
+  if (milestoneNumber == null) throw new GradleException("No such milestone: " + versionString)
+
+  def body = ""
+  httpRequest(Method.GET, "${GITHUB_BASE_URL}/issues?state=closed&sort=created&direction=asc&milestone=${milestoneNumber}", { resp, json ->
+    for (Object issue : json) {
+      body += "* #${issue.number} ${issue.title}\n"
+    }
+  })
+
+  return body
+}
+
+def buildAssetList() {
+  return file("build/install4j").list(new FilenameFilter() {
+    @Override
+    boolean accept(File dir, String name) {
+      return name =~ /\.exe|updates.xml/
+    }
+  }).collect({ file -> "build/install4j/${file}" })
+}
 
 sonarqube {
   properties {
@@ -62,10 +142,27 @@ idea {
 jar {
   manifest {
     attributes "Premain-Class": "com.faforever.client.fx.TransparentWebViewPatch",
+        "Main-Class": "com.faforever.client.Main",
         "Implementation-Title": "Downlord's FAF Client",
         "Implementation-Version": version,
         "Implementation-Vendor": "Downlord"
   }
+}
+
+distributions {
+  main {
+    contents {
+      from { [configurations.runtime, file('src/main/native'), jar, webviewPatcherJar] }
+    }
+  }
+}
+
+task proguardJar(type: ProGuardTask) {
+  dependsOn 'jar'
+  configuration 'proguard.txt'
+
+  injars(jar.archivePath.getPath())
+  outjars(libsDir.path + project.name + '_obfuscated.jar')
 }
 
 task webviewPatcherJar(type: Jar) {
@@ -77,30 +174,45 @@ task webviewPatcherJar(type: Jar) {
   include 'com/faforever/client/fx/TransparentWebViewPatch.class'
 }
 
-applicationDistribution.from(webviewPatcherJar) {
-  into "lib"
+install4j {
+  if (project.hasProperty('install4jHomeDir')) {
+    installDir = file(install4jHomeDir)
+  }
 }
-
-task copyNativeLibs(type: Copy) {
-  from "src/main/native"
-  into "$buildDir/native"
-}
-
-applicationDistribution.from(copyNativeLibs) {
-  into "lib"
-}
-
-// Uncomment when doing a release build. I have yet to find out how to make an install4j installation optional
-//install4j {
-//  installDir = file(install4jHomeDir)
-//}
 
 task buildInstaller(type: Install4jTask) {
+  description 'Creates the application installer using Install4j'
   dependsOn 'clean'
+  dependsOn 'jar'
   dependsOn 'installDist'
 
   projectFile = file('downlords-faf-client.install4j')
   release = version
+
+  doFirst {
+    if (!project.hasProperty('install4jHomeDir')) {
+      throw new RuntimeException('Specify install4jHomeDir in gradle.properties and set it to an install4j installation directory')
+    }
+  }
+}
+
+task githubRelease(type: ReleaseTask, overwrite: true) {
+  description 'Creates a new release on Github and closes the according milestone'
+  dependsOn 'buildInstaller'
+
+  doFirst {
+    project.github {
+      owner = 'micheljung'
+      repo = 'downlords-faf-client'
+      token = System.properties['githubAccessToken']
+      tagName = "v" + project.version
+      name = "v" + project.version
+      prerelease = project.version =~ /alpha|beta|RC/
+      body = buildReleaseBody()
+      assets = buildAssetList()
+    }
+    println project.github.assets.join(', ')
+  }
 }
 
 task wrapper(type: Wrapper) {
