--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -24,8 +24,6 @@ turn.refreshInterval=20000
 
 connectivityCheck.timeout=5000
 
-api.baseUrl=http://api.faforever.com
-
 newsFeedUrl=http://www.faforever.com/news/feed
 
 upnp.timeout=1500
@@ -85,9 +83,10 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
 
-oauth.loginUri=http://api.faforever.com/login
-oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
-oauth.authUri=http://api.faforever.com/oauth/authorize
-oauth.tokenUri=http://api.faforever.com/oauth/token
-oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
+api.baseUrl=http://api.faforever.com
+oauth.loginUri=${api.baseUrl}/login
+oauth.authUri=${api.baseUrl}/oauth/authorize
+oauth.tokenUri=${api.baseUrl}/oauth/token
 oauth.redirectUris=http://localhost
+oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
+oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
