Better release log

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ apply plugin: 'distribution'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.6.11-alpha'
+version = 'v0.6.12-alpha'
 
 class HttpBuilder extends HTTPBuilder {
 
@@ -97,7 +97,7 @@ def buildReleaseBody() {
   def body = ""
   httpRequest(Method.GET, "${GITHUB_BASE_URL}/issues?state=closed&sort=created&direction=asc&milestone=${milestoneNumber}", { resp, json ->
     for (Object issue : json) {
-      body += "* #${issue.number} ${issue.title}\n"
+      body += "* Fixed #${issue.number}: ${issue.title}\n"
     }
   })
 
