--- a/src/main/resources/faf_client.properties
+++ b/src/main/resources/faf_client.properties
@@ -81,8 +81,7 @@ parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 
 gravatar.avatar.urlFormat=http://www.gravatar.com/avatar/%s.jpg?s=%d&d=mm&r=pg
 gravatar.profile.urlFormat=http://www.gravatar.com/%s
-
-api.baseUrl=http://api.faforever.com
+api.baseUrl=https://api.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
