--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,7 @@ def buildAssetList() {
   return file("build/install4j").list(new FilenameFilter() {
     @Override
     boolean accept(File dir, String name) {
-      return name =~ /\.exe|updates.xml/
+      return name =~ /\.exe/
     }
   }).collect({ file -> "build/install4j/${file}" })
 }
