--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ irc.host=irc.faforever.com
 irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
-lobby.host=test.faforever.com
+lobby.host=faforever.com
 lobby.port=8001
 
 update.host=faforever.com
