--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ irc.host=irc.faforever.com
 irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
-lobby.host=faforever.com
+lobby.host=test.faforever.com
 lobby.port=8001
 
 update.host=faforever.com
@@ -77,8 +77,7 @@ ranked1v1.search.maxRadius=0.25
 
 parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
 parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
-
-api.baseUrl=https://api.faforever.com
+api.baseUrl=https://api.test.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
