--- a/build.gradle
+++ b/build.gradle
@@ -212,6 +212,7 @@ task wrapper(type: Wrapper) {
 repositories {
   mavenCentral()
   jcenter()
+  maven { url "https://jitpack.io" }
 }
 
 jacoco {
@@ -268,5 +269,5 @@ dependencies {
   compile 'io.sigpipe:jbsdiff:1.0'
   compile 'org.luaj:luaj-jse:3.0.1'
   compile 'commons-validator:commons-validator:1.5.1'
+  compile 'com.github.micheljung:JJsonRpc:3d5018d7c4'
 }
-
