--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ replay.port=11002
 
 turn.host=faforever.com
 turn.port=3478
+stun.host=faforever.com
+
 turn.refreshInterval=20000
 connectivityCheck.timeout=60000
 
