--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,7 +57,10 @@ rating.moderate=1000
 rating.good=1500
 rating.high=2000
 rating.top=2500
-api.baseUrl=https://api.test.faforever.com
+
+parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
+parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
+api.baseUrl=https://api.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
