--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,7 +73,7 @@ rating.top=2500
 
 parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
 parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
-api.baseUrl=https://api.faforever.com
+api.baseUrl=http://localhost:8080
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
